--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,3 +34,10 @@ jobs:
      # - name: Test with pytest
        # run: |
          # pytest
+    - uses: akhileshns/heroku-deploy@v3.12.12
+      with:
+        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+        heroku_app_name: "reto1cyber"
+        heroku_email:  "nfpazmino@gmail.com"
+        buildpack: 'heroku/python'
+        usedocker: false
