--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,7 +38,7 @@ jobs:
     - uses: akhileshns/heroku-deploy@v3.12.12
       with:
         heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-        heroku_app_name: "reto1cyber"
+        heroku_app_name: "reto1cyber1"
         heroku_email:  "nfpzmino@gmail.com"
         usedocker: false
 
