--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,6 +39,8 @@ jobs:
       with:
         heroku_api_key: ${{secrets.HEROKU_API_KEY}}
         heroku_app_name: "reto1cyber1"
+        heroku_app_name: "heroku-gitlab-master"
         heroku_email:  "nfpzmino@gmail.com"
+        buildpack: 'heroku/python'
         usedocker: false
 
