--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,14 +31,6 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-   #- name: Test with pytest
-     # run: |
-     #  pytest
-        
-    - uses: akhileshns/heroku-deploy@v3.12.12
-      with:
-        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-        heroku_app_name: "heroku-gitlab-master"
-        heroku_email:  "nfpazmino@mail.com"
-        buildpack: 'heroku/python'
-        usedocker: false
+   - name: Test with pytest
+      run: |
+       pytest
