--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,3 +34,11 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - uses: akhileshns/heroku-deploy@v3.12.12
+      with:
+        heroku_api_key: ${{secrets.HEROKU_SECRET}}
+        heroku_app_name: "master-cs-yahoo-finance-disney"
+        heroku_email:  "nfpazmino@gmail.com"
+        buildpack: 'heroku/python'
+        usedocker: false
+        
