--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,9 +26,9 @@ jobs:
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Test with pytest
-      run: |
-        pytest
+    $- name: Test with pytest
+      $run: |
+        $pytest
         
     - uses: akhileshns/heroku-deploy@v3.12.12
       with:
