--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,15 +25,24 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        # flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        # flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+ 
+    - name: Test with pytest
+      run: |
+        pip install pytest
+        export PYTHONPATH=src
+        pytest
+    - name: Deploy to Heroku
+      env:
+        HEROKU_API_TOKEN: ${{ secrets.HEROKU }}
+        HEROKU_APP_NAME: "heroku-disneyreto11"
+      if: github.ref == 'refs/heads/master' && job.status == 'success'
+      run: |
+        git remote add heroku https://heroku:heroku-disneyreto11@git.heroku.com/$heroku-disneyreto11.git
+        git push heroku HEAD:master -f
 
-    $- name: Test with pytest
-      $run: |
-        $pytest
-        
-    - uses: akhileshns/heroku-deploy@v3.12.12
-      with:
-        heroku_api_key: ${{secrets.HEROKU}}
-        heroku_app_name: "heroku-disneyreto11"
-        heroku_email:  "nfpazmino@gmail.com"
-        buildpack: 'heroku/python'
-        usedocker: false
